<resources>
    <string name="app_name">BulletIn</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="no_news">No News Found</string>
    <string name="select_category">Select Category</string>
    <string name="technology">Technology</string>
    <string name="sports">Sports</string>
    <string name="entertainment">Entertainment</string>
    <string name="politics">Politics</string>
    <string name="business">Business</string>
    <string name="click_here_to_read_more">Click here to read more</string>
</resources>
